# Pyxis

./: .gitignore  Makefile  README.md  README_Splinter.md  cloudlab_profile.py  debug.txt  setup.sh
_compute/: compute.toml  compute.toml-example
_compute/src/: container.rs  dispatch.rs  nativestate.rs  proxy.rs  sched.rs  xloop.rs
compute/: Cargo.toml  client.toml  compute.toml-example  elas.sh  elastic_curve.sh  kayak.toml-example  kayak_converge.sh  kayak_serial.sh  lb.toml-example  lb.toml-group  lb_converge.sh  lb_once.sh  log.sh  mn.sh  multi_type.sh  nCmS-1core.sh  nCmS-1out.sh  nCmS-noplus.sh  nCmS.sh  nCmS_points.sh  opt.sh  out.sh  queue.sh  run_multi.sh  sample_workload.py  scale.sh  single_type.sh  test.sh  test_cost.sh
compute/setup/: kayak-16type.toml  kayak-2type.toml  kayak-4type.toml  kayak-8type.toml
compute/src/: container.rs  dispatch.rs  lib.rs  nativestate.rs  proxy.rs  sched.rs  workload.rs  xloop.rs
db/: Cargo.toml  server.toml-example  storage.toml-example
db/src/: config.rs  container.rs  context.rs  cycles.rs  dispatch.rs  lib.rs  master.rs  native.rs  rpc.rs  sched.rs  task.rs  tenant.rs  wireformat.rs
ext/pushback/: Cargo.toml
ext/pushback/src/: lib.rs
ext/tao/src/: lib.rs
ext/vector/: Cargo.toml
ext/vector/src/: lib.rs
logs/: dyn.py  elas_convg.py  elas_perfm.py  elastic.py  fig.py  multi-rpc.py  multi-type.py  perform.py  performance.py  ratio-tput.py  scale.py  tput-peak.py
logs/multi-type/: sampled_type.txt
net/framework/: Cargo.toml
net/framework/src/: lib.rs
net/framework/src/headers/: ip.rs
net/framework/src/interface/: packet.rs
net/framework/src/interface/port/: phy_port.rs
net/framework/src/scheduler/: context.rs  standalone_scheduler.rs
net/framework/src/utils/: asm.rs
sandstorm/src/: buf.rs  common.rs  db.rs  ext.rs  macros.rs  mock.rs  null.rs
scripts/: run-compute  run-dyn  run-elastic  run-group  run-kayak  run-kayak-2  run-kayak-plus  run-lb  run-server  run-static  run-storage
splinter/: Cargo.toml  Cargo.toml.bak  bimodal.sh  enum.sh  enum1.sh  enum2.sh  enum3.sh  enum4.sh  iso.sh  night.sh
splinter/src/: container.rs  dispatch.rs  nativestate.rs
util/: Cargo.toml
util/src/: lib.rs  model.rs
