[package]
name = "splinter"
version = "0.1.0"
authors = ["Ankit Bhardwaj <bhrdwj.ankit@gmail.com>"]
license = "MIT"

[lib]
name = "splinter"
path = "src/lib.rs"

[[bin]]
name = "compute"
path = "src/bin/client/compute.rs"

[[bin]]
name = "lb-tput"
path = "src/bin/client/lb-tput.rs"

[[bin]]
name = "lb-queue"
path = "src/bin/client/lb-queue.rs"

[dependencies]
order-stat   = "0.1.3"
bincode      = "1.0"
crypto-hash  = "0.3.4"
rust-crypto  = "0.2.36"
libc         = "0.2.43"
nix          = "0.11.0"
log          = "0.3"
rand         = "0.4"
time         = "0.1"
spin         = "0.5.2"  # Consider using parking lot?
bytes        = "0.4.7"
env_logger   = "0.3"
libloading   = "0.3"
openssl      = "0.10.24"
rustlearn    = "0.5.0"
serde        = "1.0.37"
serde_derive = "1.0.37"
toml         = "0.4.5"
zipf         = "2.0"
db           = {path = "../db"}
sandstorm    = {path = "../sandstorm"}
e2d2         = {path = "../net/framework"}
util         = {path = "../util"}
atomic_float = "0.1.0"

# Add feature name in default features to enable cyclecounter for the given stage,
# where stage name can be ["execution"].
[features]
default = ["ml-model"]
execution = []
ml-model = []
checksum = []
